manifests/web-cluster/sdlc/helium/metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metadata
  name: metadata
  namespace: helium
spec:
  selector:
    matchLabels:
      app: metadata
  template:
    metadata:
      labels:
        app: metadata
        security-group: public-rds-access
    spec:
      serviceAccountName: public-monitoring-rds-read-replica-monitoring-user-access
      containers:
        - name: metadata
          image: public.ecr.aws/v0j6k5v6/entity-metadata-service:0.0.34
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8081
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: metadata
  namespace: helium
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: http
  selector:
    app: metadata
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metadata
  namespace: helium
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "50"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "50"
    external-dns.alpha.kubernetes.io/exclude: "true" # Tell external-dns not to manage DNS for metadata ingress since it's being handled out of band in Cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: entities.nft.test-helium.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metadata
            port:
              number: 8081
